--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
+    "html-webpack-plugin": "^2.29.0",
     "postcss": "^6.0.4",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
