--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "postcss": "^6.0.4",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server"
   },
   "author": "Sergio Expósito",
   "license": "ISC"
