--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
@@ -24,7 +25,8 @@
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0",
+    "react-hot-loader": "^3.0.0-beta.7"
   },
   "scripts": {
     "dev": "webpack-dev-server",
