--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
@@ -19,14 +20,17 @@
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "eslint": "^4.1.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
     "postcss": "^6.0.4",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
+    "react-hot-loader": "^3.0.0-beta.7",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "react-hot-loader": "^3.0.0-beta.7"
+    "webpack-dev-server": "^2.5.0"
   },
   "scripts": {
     "dev": "webpack-dev-server",
