--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
     "presets":["react" ,"es2015" , "stage-2"],
-    "plugins": ["react-hot-loader/babel"],
+    "plugins":[
+         ["transform-object-rest-spread", { "useBuiltIns": true }],
+         ["transform-class-properties", { "spec": true }]
+    ],
+    "env":{
+        "production":{
+            "plugins": [
+                ["react-hot-loader/babel"],
+                ["transform-react-constant-elements"]
+            ]
+        }
+    }
 }
