--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
